src/objects/LMS_Revenue_Center__c.object
<CustomObject>
    <fields>
        <fullName>c_current_flag__c</fullName>
        <label>Current flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_lms_rev_center_desc__c</fullName>
        <label>Revenue center description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pos_rev_center_cd__c</fullName>
        <label>Revenue center code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LMS Revenue Centers</relationshipLabel>
        <relationshipName>LMS_Revenue_Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>Quality code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rev_center_cd__c</fullName>
        <label>Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rev_center_short_desc__c</fullName>
        <label>Revenue center short description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_effective_end_dt__c</fullName>
        <label>Effective end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_effective_start_dt__c</fullName>
        <label>Effective start date</label>
        <type>Date</type>
    </fields>
    <label>LMS Revenue Center</label>
    <nameField>
        <displayFormat>LRC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LMS Revenue Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>